mobile: fix: button is too big on ios

--- a/schedule-mobile-app/src/app/shared/modals/search-params-modal/components/edit-search-params/edit-search-params.component.scss
+++ b/schedule-mobile-app/src/app/shared/modals/search-params-modal/components/edit-search-params/edit-search-params.component.scss
@@ -4,3 +4,11 @@
   display: table;
   margin: 5px auto;
 }
+
+.remove-params-button {
+  --width: 60px;
+  --height: 60px;
+  --vertical-align: middle;
+  --padding-start: 10px;
+  --padding-end: 10px;
+}
